--- a/source/dialogs/curve-convolution/curve-convolution-modal.html
+++ b/source/dialogs/curve-convolution/curve-convolution-modal.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true" ng-disabled="wiModal.applyingInProgress">&times;</button>
                 <h4><span class="curve-convolution-16x16"></span>&nbsp;Curve Convolution</h4>
             </div>
             <div class="modal-body">
@@ -52,13 +52,16 @@
                     </div>
                     <div class="form-group">
                         <label class="col-sm-6">Result:</label>
-                        <wi-custom-input type='curve' model='wiModal.ResultCurve' options='wiModal.curvesArr' class="col-sm-6"></wi-custom-input>
+                        <div class="col-sm-6">
+                            <wi-custom-input type='curve' model='wiModal.ResultCurve' options='wiModal.curvesArr'></wi-custom-input>
+                        </div>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button class='btn btn-default' ng-click='wiModal.onRunButtonClicked()' ng-disabled="!wiModal.inputCurve ||!wiModal.stdCurve || !wiModal.ResultCurve.curveName || wiModal.applyingInProgress"><span class="run-16x16"></span>&nbsp;Run</button>
-                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="close-16x16"></span>&nbsp;Close</button>
+                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'
+                ng-disabled="wiModal.applyingInProgress"><span class="close-16x16"></span>&nbsp;Close</button>
             </div>
         </div>
     </div>
