--- a/source/dialogs/fill-data-gaps/fill-data-gaps-modal.html
+++ b/source/dialogs/fill-data-gaps/fill-data-gaps-modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade">
+<div class="modal fade" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -20,7 +20,7 @@
                                     <label class="col-sm-2">Input Curve</label>
                                     <div class="col-sm-4">
                                         <ui-select ng-model="wiModal.SelectedCurve" class="normal-text"
-                                         ng-change="wiModal.getNullValueNumber()">
+                                         ng-change="wiModal.getCurveData()">
                                             <ui-select-match placeholder='Select a curve'>{{wiModal.SelectedCurve.properties.name}}</ui-select-match>
                                             <ui-select-choices group-by="'datasetName'" repeat='curve in wiModal.curves | filter:{properties: {name:$select.search}} track by curve.id'>
                                                 <div class="padding-left-20px">{{curve.properties.name}}</div>
@@ -34,36 +34,34 @@
                                         <input class="form-control wi-form-control" type="number" ng-model="wiModal.topDepth" step="any">
                                     </div>
                                     <label class="col-sm-2">Botton Depth</label>
-                                    <div class="col-sm-2">
+                                    <div class="col-sm-2 padding-right-0">
                                         <input ng-model="wiModal.bottomDepth" type="number" class="form-control wi-form-control" step="any">
                                     </div>
                                     <div class="col-sm-2">
-                                        <button class="btn btn-default small-button" ng-click="wiModal.clickDefault()"style="width=100%;">Default</button>
+                                        <button class="btn btn-default wi-form-control width-100-percent" ng-click="wiModal.clickDefault()">Default</button>
                                     </div>
                                 </div>
                                 <div class='form-group'>
-                                    <div class="col-sm-4">
-                                        <button class="btn btn-default small-button" ng-click="wiModal.NullnumberDefault()">Null value's Number</button>
-                                    </div>
-                                    <div class="col-sm-4">
-                                        <input class="form-control wi-form-control" type="number" min="0" max="{{wiModal.NullData.length}}" ng-model="wiModal.Nullnumber">
+                                    <label class="col-sm-3">Null value's Number</label>
+                                    <div class="col-sm-3">
+                                        <input class="form-control wi-form-control" type="number" ng-model="wiModal.Nullnumber" disabled>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-sm-2">Gaps maximum with</label>
-                                    <div class="col-sm-4">
-                                        <input class="form-control wi-form-control" type="text" ng-model="wiModal.gapsMaximum">
+                                    <label class="col-sm-3">Gaps maximum with</label>
+                                    <div class="col-sm-3">
+                                        <input class="form-control wi-form-control" type="number" step='any' ng-model="wiModal.gapsMaximum">
                                     </div>
                                     <div class="col-sm-3">
                                         <label>
-                                            <input ng-model="wiModal.calcMethod"
-                                                    type="radio" value="lateral" class="wi-form-control">In samples
+                                            <input ng-model="wiModal.calcMethod" type="radio" value="sample">
+                                            &nbsp;In samples
                                         </label>
                                     </div>
                                     <div class="col-sm-3">
                                         <label>
-                                            <input ng-model="wiModal.calcMethod"
-                                                    type="radio" value="arithmetic" class="wi-form-control">In M
+                                            <input ng-model="wiModal.calcMethod" type="radio" value="depth">
+                                            &nbsp;In M
                                         </label>
                                     </div>
                                 </div>
@@ -82,6 +80,12 @@
                                     <label class="col-sm-2">Name</label>
                                     <div class="col-sm-4">
                                         <input class="form-control wi-form-control" ng-model="wiModal.curveName">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2">Output Suffix</label>
+                                    <div class="col-sm-4">
+                                        <input type="text" class="form-control wi-form-control" ng-model='wiModal.suffix'>
                                     </div>
                                 </div>
                             </div>
@@ -128,13 +132,12 @@
                                         </table>
                                     </div>
                                 </div>
-
                             </div>
                     </form>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button class='btn btn-default' ng-click='wiModal.run()'><span class="run-16x16"></span>&nbsp;Run</button>
+                    <button class='btn btn-default' ng-click='wiModal.onRunButtonClicked()'><span class="run-16x16"></span>&nbsp;Run</button>
                     <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="close-16x16"></span>&nbsp;Close</button>
                 </div>
             </div>
